src/log/build_2024-11-12_19-15-26/navegacao_pkg/stderr.log
  File "/home/atwork/caramelo_goiania/src/install/navegacao_pkg/lib/python3.10/site-packages/navegacao_pkg/camera_node.py", line 15
    Usando BGR (Blue,Green,Red)
           ^^^
SyntaxError: invalid syntax

